# nickel-cursor

./: Cargo.toml  LICENSE-MIT  README.md  cursor.ncl  flake.nix
src/: lib.rs  main.rs  xcursor.rs
